feat: 完成生成api逻辑
