# design/api-design-js-global/src/main.js
@@ -21,5 +21,17 @@ const { data, loading, send } = useRequest(method, {
   initialData: {},
   immediate: false
 });
-
 const res = await Apis.pet.getPetById({ petId: 1 });
+const b = await Apis.clients.generate(
+  {
+    lang: 'xxx',
+    options: {
+      additionalProperties: 'string'
+    }
+  },
+  {
+    params: {
+      codegenOptionsURL: ''
+    }
+  }
+);
